bugfix: fruit + modal alignment issues on mobile solved by hidding overflow of fruit lables

--- a/src/components/Graph.scss
+++ b/src/components/Graph.scss
@@ -1,5 +1,6 @@
 .matrix {
   position: relative;
+  overflow: hidden;
 
   &__graph {
     width: 100%;
